updated for parameter optimization api2.0