@@ -2,6 +2,7 @@ package manager;
 
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.IOException;
 import java.net.InetAddress;
 import java.util.Dictionary;
 import java.util.Properties;
@@ -14,10 +15,9 @@ import org.jivesoftware.smackx.disco.ServiceDiscoveryManager;
 import org.w3c.dom.Document;
 import com.google.gson.Gson;
 
-import messages.server.Capabilities;
-import messages.server.Server;
+import eu.cpswarm.optimization.statuses.SimulationManagerCapabilities;
+import eu.cpswarm.optimization.statuses.SimulationManagerStatus;
 import simulation.SimulationManager;
-
 import org.osgi.framework.BundleContext;
 import org.osgi.service.component.ComponentFactory;
 import org.osgi.service.component.ComponentInstance;
@@ -32,6 +32,7 @@ import org.osgi.service.component.annotations.Reference;
 public class StageSimulationManager extends SimulationManager {
 
 	/* create an instance per requestor by using a Factory Component */
+	
 	private ComponentInstance coordinatorInstance = null;
 	private ComponentInstance fileTransferListenerInstace = null;
 	private ComponentFactory messageEventCoordinatorFactory;
@@ -40,7 +41,6 @@ public class StageSimulationManager extends SimulationManager {
 	@Reference(target = "(component.factory=it.ismb.pert.cpswarm.stageMessageEventCoordinatorImpl.factory)")
 	public void getMessageEventCoordinatorFactory(final ComponentFactory s) {
 		this.messageEventCoordinatorFactory = s;
-
 	}
 
 	@Reference(target = "(component.factory=it.ismb.pert.cpswarm.stageFileTransferListenerImpl.factory)")
@@ -67,8 +67,11 @@ public class StageSimulationManager extends SimulationManager {
 		String mqttBroker = "";
 		boolean fake = false;
 		String verbosity = "2";
+		String launchFile = null;
+		String fitnessFunction = null;
+		int maxNumberOfCarts = 0;
 
-		Server serverInfo = new Server();
+		SimulationManagerStatus simulationManagerStatus = null;
 		try {
 			if(context.getProperty("verbosity")!=null){
 				verbosity = context.getProperty("verbosity");
@@ -79,6 +82,28 @@ public class StageSimulationManager extends SimulationManager {
 			} else {
 				CURRENT_VERBOSITY_LEVEL = VERBOSITY_LEVELS.values()[verbosityI];
 			}
+			if(context.getProperty("launch.file")!=null){
+				launchFile = context.getProperty("launch.file");
+			}
+			if (launchFile == null) {
+				System.out.println("launchFile = null");
+				deactivate();
+			}
+			if(context.getProperty("fitness.function")!=null){
+				fitnessFunction = context.getProperty("fitness.function");
+			}
+			if (fitnessFunction == null) {
+				System.out.println("path of fitness function = null");
+				deactivate();
+			}
+			if(context.getProperty("maxNumber.carts")!=null){
+				maxNumberOfCarts = Integer.parseInt(context.getProperty("maxNumber.carts"));
+			}
+			if (maxNumberOfCarts == 0) {
+				System.out.println("the number of carts can not be 0");
+				deactivate();
+			}
+
 			if(SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(SimulationManager.VERBOSITY_LEVELS.ALL)) {
 				System.out.println("Instantiate a StageSimulationManager .....");
 			}
@@ -105,12 +130,10 @@ public class StageSimulationManager extends SimulationManager {
 			if (document.getElementsByTagName("fake").getLength() != 0) {
 				fake = Boolean.parseBoolean(document.getElementsByTagName("fake").item(0).getTextContent());
 			}
-			Capabilities capabilities = new Capabilities();
-			capabilities
-					.setDimensions(Long.valueOf(document.getElementsByTagName("dimensions").item(0).getTextContent()));
-			capabilities
-					.setMaxAgents(Long.valueOf(document.getElementsByTagName("maxAgents").item(0).getTextContent()));
-			serverInfo.setCapabilities(capabilities);
+			int dimension = new Integer(document.getElementsByTagName("dimensions").item(0).getTextContent()).intValue();
+			int maxAgents = new Integer(document.getElementsByTagName("maxAgents").item(0).getTextContent()).intValue();
+			SimulationManagerCapabilities capabilities = new SimulationManagerCapabilities(dimension, maxAgents);
+			simulationManagerStatus = new SimulationManagerStatus(null, null, capabilities);
 			optimizationUser = document.getElementsByTagName("optimizationUser").item(0).getTextContent();
 			orchestratorUser = document.getElementsByTagName("orchestratorUser").item(0).getTextContent();
 			rosFolder = document.getElementsByTagName("rosFolder").item(0).getTextContent();
@@ -128,7 +151,7 @@ public class StageSimulationManager extends SimulationManager {
 			}
 			if (!new File(dataFolder).isDirectory()) {
 				System.out.println("Data folder must be a folder");
-				return;
+				deactivate();
 			}
 
 		} catch (ParserConfigurationException e1) {
@@ -138,22 +161,18 @@ public class StageSimulationManager extends SimulationManager {
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
-		connectToXMPPserver(serverURI, serverName, serverPassword, dataFolder, rosFolder, serverInfo, optimizationUser,
-				orchestratorUser, uuid, debug, monitoring, mqttBroker, timeout, fake);
-		publishPresence(serverURI, serverName, serverPassword, dataFolder, rosFolder, serverInfo, optimizationUser,
+		boolean connected = connectToXMPPserver(serverURI, serverName, serverPassword, dataFolder, rosFolder, simulationManagerStatus, optimizationUser,
+				orchestratorUser, uuid, debug, monitoring, mqttBroker, timeout, fake, launchFile, fitnessFunction, maxNumberOfCarts);
+		if(connected) {
+			publishPresence(serverURI, serverName, serverPassword, dataFolder, rosFolder, simulationManagerStatus, optimizationUser,
 				orchestratorUser, uuid, debug, monitoring, mqttBroker, timeout);
-		while (true) {
-			try {
-				Thread.sleep(60000);
-			} catch (InterruptedException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
-			}
+		} else {
+			deactivate();				
 		}
 	}
 
 	public void publishPresence(final InetAddress serverURI, final String serverName, final String serverPassword,
-			final String dataFolder, final String rosFolder, final Server serverInfo, final String optimizationUser,
+			final String dataFolder, final String rosFolder, final SimulationManagerStatus simulationManagerStatus, final String optimizationUser,
 			final String orchestratorUser, final String uuid, final boolean debug, final boolean monitoring,
 			final String mqttBroker, final int timeout) {
 		Properties props = new Properties();
@@ -172,21 +191,47 @@ public class StageSimulationManager extends SimulationManager {
 		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
-		
-		serverInfo.setServer(clientJID.asUnescapedString());
-		ServiceDiscoveryManager disco = ServiceDiscoveryManager.getInstanceFor(this.getConnection());
-		disco.addFeature("http://jabber.org/protocol/si/profile/file-transfer");
-		final Presence presence = new Presence(Presence.Type.available);
-		Gson gson = new Gson();
-		String statusToSend = gson.toJson(serverInfo, Server.class);
-		if(SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(SimulationManager.VERBOSITY_LEVELS.ALL)) {
-			System.out.println(" \n MA : the server info is " + statusToSend);
+		boolean result = true;
+		if(!isFake()) {
+		ProcessBuilder builder = null;
+		Process process = null;	
+			try {
+				builder = new ProcessBuilder(new String[] { "/bin/bash", "-c",
+						"source /opt/ros/kinetic/setup.bash; cd " + this.getCatkinWS() + " ; catkin build " });
+				if (SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(VERBOSITY_LEVELS.ALL))
+					builder.inheritIO();
+				process = builder.start();
+				process.waitFor();
+			} catch (IOException | InterruptedException err) {
+				result = false;
+				System.err.println("Error when building workspace: " + this.getCatkinWS());
+				err.printStackTrace();
+			} finally {
+				if (process != null) {
+					process.destroy();
+					process = null;
+				}
+			}
 		}
-		presence.setStatus(statusToSend);
-		try {
-			this.getConnection().sendStanza(presence);
-		} catch (final NotConnectedException | InterruptedException e) {
-			e.printStackTrace();
+		if (SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(VERBOSITY_LEVELS.ALL))
+			System.out.println("Compilation finished, with succeed = " + result);
+		if (result || isFake()) {
+			ServiceDiscoveryManager disco = ServiceDiscoveryManager.getInstanceFor(this.getConnection());
+			disco.addFeature("http://jabber.org/protocol/si/profile/file-transfer");
+			final Presence presence = new Presence(Presence.Type.available);
+			Gson gson = new Gson();
+			String statusToSend = gson.toJson(simulationManagerStatus, SimulationManagerStatus.class);
+			if (SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(SimulationManager.VERBOSITY_LEVELS.ALL)) {
+				System.out.println(" \nStage SM : the server info is " + statusToSend);
+			}
+			presence.setStatus(statusToSend);
+			try {
+				this.getConnection().sendStanza(presence);
+			} catch (final NotConnectedException | InterruptedException e) {
+				e.printStackTrace();
+			}
+		} else {
+			return;
 		}
 	}
 
